--- a/examples/python/notebooks/adk_tutorial.ipynb
+++ b/examples/python/notebooks/adk_tutorial.ipynb
@@ -67,13 +67,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 23,
       "metadata": {
         "id": "sbwxKypOSBkN",
-        "outputId": "12195264-0135-4a70-b71c-4a4eb83672bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "62e4b385-502f-42ab-e16f-989c5aabf034"
       },
       "outputs": [
         {
@@ -94,9 +94,9 @@
         "from google.adk.runners import Runner\n",
         "from google.genai import types # For creating message Content/Parts\n",
         "from google.colab import userdata\n",
-        "userdata.get('GOOGLE_API_KEY')\n",
-        "from google.colab import userdata\n",
         "userdata.get('ANTHROPIC_API_KEY')\n",
+        "from google.colab import userdata\n",
+        "userdata.get('GOOGLE_API_KEY')\n",
         "\n",
         "import warnings\n",
         "# Ignore all warnings\n",
@@ -110,13 +110,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 22,
       "metadata": {
         "id": "3mNsVI5eSDOi",
-        "outputId": "e693709a-4854-40d4-c401-fecc301b69fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "a5488e9b-54ad-4cce-f0f8-505aad4fcb49"
       },
       "outputs": [
         {
@@ -160,13 +160,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 24,
       "metadata": {
         "id": "MI_qvZJrSJuR",
-        "outputId": "60096e1d-5a62-429c-8081-127c4bcc99d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "3f3fb48a-eec3-400a-b63e-99b898549139"
       },
       "outputs": [
         {
@@ -185,7 +185,7 @@
         "\n",
         "# Note: Specific model names might change. Refer to LiteLLM/Provider documentation.\n",
         "MODEL_GPT_4O = \"openai/gpt-4o\"\n",
-        "MODEL_CLAUDE_SONNET = \"anthropic/claude-3-5-haiku-20241022\"\n",
+        "MODEL_CLAUDE_SONNET = \"anthropic/laude-3-5-haiku-20241022\"\n",
         "\n",
         "\n",
         "print(\"\\nEnvironment configured.\")"
@@ -226,11 +226,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
-        "id": "ILy7YTCbSRAT"
+        "id": "ILy7YTCbSRAT",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3747d349-9e16-45aa-f81d-9443cd16e191"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Tool: get_weather called for city: New York ---\n",
+            "{'status': 'success', 'report': 'The weather in New York is sunny with a temperature of 25°C.'}\n",
+            "--- Tool: get_weather called for city: Paris ---\n",
+            "{'status': 'error', 'error_message': \"Sorry, I don't have weather information for 'Paris'.\"}\n"
+          ]
+        }
+      ],
       "source": [
         "# @title Define the get_weather Tool\n",
         "def get_weather(city: str) -> dict:\n",
@@ -292,13 +307,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 26,
       "metadata": {
         "id": "6Ho1COmKSUeV",
-        "outputId": "21bc7b82-986c-4a2c-d523-6777f41340d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "49cbe078-ee6c-44d0-b134-a531451dd053"
       },
       "outputs": [
         {
@@ -347,13 +362,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 27,
       "metadata": {
         "id": "h30dNtqMSah5",
-        "outputId": "644d040f-65d8-40ef-dd2b-7d63fa6a38ff",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "077d9d50-241d-4364-ed3c-a5a3975bbb72"
       },
       "outputs": [
         {
