--- a/adk_tutorial.ipynb
+++ b/adk_tutorial.ipynb
@@ -60,11 +60,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "ARCoeUZCRNGi"
+        "id": "ARCoeUZCRNGi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8ea0387a-ee7b-41d1-e56f-e8cf787bbd96"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.2 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m45.3 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m24.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/232.1 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m232.1/232.1 kB\u001b[0m \u001b[31m12.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h\u001b[?25l   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/95.2 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m95.2/95.2 kB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m217.1/217.1 kB\u001b[0m \u001b[31m11.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m334.1/334.1 kB\u001b[0m \u001b[31m17.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.1/76.1 kB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.5/62.5 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m103.3/103.3 kB\u001b[0m \u001b[31m6.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.4/44.4 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m72.0/72.0 kB\u001b[0m \u001b[31m4.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.6/7.6 MB\u001b[0m \u001b[31m74.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m46.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstallation complete.\n"
+          ]
+        }
+      ],
       "source": [
         "# @title Step 0: Setup and Installation\n",
         "# Install ADK and LiteLLM for multi-model support\n",
@@ -77,13 +101,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "sbwxKypOSBkN",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62e4b385-502f-42ab-e16f-989c5aabf034"
+        "outputId": "9c0b6e3e-69a0-41b1-da26-b9bbcf30049c"
       },
       "outputs": [
         {
@@ -120,13 +144,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "3mNsVI5eSDOi",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a5488e9b-54ad-4cce-f0f8-505aad4fcb49"
+        "outputId": "3b4a817e-51c0-4257-90ff-45e1cbfe7816"
       },
       "outputs": [
         {
@@ -146,13 +170,13 @@
         "# --- IMPORTANT: Replace placeholders with your real API keys ---\n",
         "\n",
         "# Gemini API Key (Get from Google AI Studio: https://aistudio.google.com/app/apikey)\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = \"GOOGLE_API_KEY\" # <--- REPLACE\n",
+        "os.environ[\"GOOGLE_API_KEY\"] = userdata.get('GOOGLE_API_KEY') # <--- REPLACE\n",
         "\n",
         "# OpenAI API Key (Get from OpenAI Platform: https://platform.openai.com/api-keys)\n",
         "os.environ['OPENAI_API_KEY'] = 'YOUR_OPENAI_API_KEY' # <--- REPLACE\n",
         "\n",
         "# Anthropic API Key (Get from Anthropic Console: https://console.anthropic.com/settings/keys)\n",
-        "os.environ['ANTHROPIC_API_KEY'] = 'ANTHROPIC_API_KEY' # <--- REPLACE\n",
+        "os.environ['ANTHROPIC_API_KEY'] = userdata.get('ANTHROPIC_API_KEY') # <--- REPLACE\n",
         "\n",
         "\n",
         "# --- Verify Keys (Optional Check) ---\n",
@@ -170,13 +194,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 5,
       "metadata": {
         "id": "MI_qvZJrSJuR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "953a0103-e56c-4e62-dabd-31416283eb15"
+        "outputId": "2324d971-b353-4634-9eec-604ca8a43d8d"
       },
       "outputs": [
         {
@@ -236,13 +260,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 6,
       "metadata": {
         "id": "ILy7YTCbSRAT",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "75cc9e4c-79a5-4943-b022-4b017ba6a668"
+        "outputId": "8bf88397-29d9-4934-93f8-75b77ade06ef"
       },
       "outputs": [
         {
@@ -317,13 +341,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "6Ho1COmKSUeV",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8a9e3b68-3de5-49df-d4be-b5b1eb727c05"
+        "outputId": "6e16f7aa-f88f-48c8-dffa-a68bc2ebef08"
       },
       "outputs": [
         {
@@ -372,13 +396,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "id": "h30dNtqMSah5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7d3e39e1-0f81-4017-9cef-472f376b70b2"
+        "outputId": "29c32922-3885-4611-8a1c-a67e3f789f2d"
       },
       "outputs": [
         {
@@ -446,7 +470,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "yZJr8lbkSebH"
       },
@@ -469,10 +493,10 @@
         "  # We iterate through events to find the final answer.\n",
         "  async for event in runner.run_async(user_id=user_id, session_id=session_id, new_message=content):\n",
         "      # You can uncomment the line below to see *all* events during execution\n",
-        "      # print(f\"  [Event] Author: {event.author}, Type: {type(event).__name__}, Final: {event.is_final_response()}, Content: {event.content}\")\n",
+        "    #print(f\"  [Event] Author: {event.author}, Type: {type(event).__name__}, Final: {event.is_final_response()}, Content: {event.content}\")\n",
         "\n",
         "      # Key Concept: is_final_response() marks the concluding message for the turn.\n",
-        "      if event.is_final_response():\n",
+        "    if event.is_final_response():\n",
         "          if event.content and event.content.parts:\n",
         "             # Assuming text response in the first part\n",
         "             final_response_text = event.content.parts[0].text\n",
@@ -505,11 +529,76 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "mEd2QhHyUKY8"
+        "id": "mEd2QhHyUKY8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1c3492b0-5929-43dc-f162-46b1e47d98c6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            ">>> User Query: What is the weather like in London?\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:google_genai.types:Warning: there are non-text parts in the response: ['function_call'],returning concatenated text result from text parts,check out the non text parts for full response from model.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Tool: get_weather called for city: London ---\n",
+            "<<< Agent Response: The weather in London is cloudy with a temperature of 15°C.\n",
+            "\n",
+            "\n",
+            ">>> User Query: How about Paris?\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:google_genai.types:Warning: there are non-text parts in the response: ['function_call'],returning concatenated text result from text parts,check out the non text parts for full response from model.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Tool: get_weather called for city: Paris ---\n",
+            "<<< Agent Response: I'm sorry, I don't have weather information for Paris.\n",
+            "\n",
+            "\n",
+            ">>> User Query: Tell me the weather in New York\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:google_genai.types:Warning: there are non-text parts in the response: ['function_call'],returning concatenated text result from text parts,check out the non text parts for full response from model.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--- Tool: get_weather called for city: New York ---\n",
+            "<<< Agent Response: The weather in New York is sunny with a temperature of 25°C.\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "# @title Run the Initial Conversation\n",
         "\n",
@@ -586,7 +675,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "mPBr56NSnMje"
       },
@@ -700,11 +789,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "7zqJIS4_nhoh"
+        "id": "7zqJIS4_nhoh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2323ecb6-4f33-4a18-962e-2bbe78296672"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Agent 'weather_agent_claude' created using model 'anthropic/claude-3-5-haiku-20241022'.\n",
+            "Session created: App='weather_tutorial_app_claude', User='user_1_claude', Session='session_001_claude'\n",
+            "Runner created for agent 'weather_agent_claude'.\n",
+            "\n",
+            "--- Testing Claude Agent ---\n",
+            "\n",
+            ">>> User Query: Weather in London please.\n",
+            "--- Tool: get_weather called for city: London ---\n",
+            "<<< Agent Response: Here's the current weather report for London: It's cloudy with a temperature of 15°C (59°F). Perfect for a light jacket or sweater if you're heading out!\n",
+            "\n",
+            "Is there anything else I can help you with?\n"
+          ]
+        }
+      ],
       "source": [
         "# @title Define and Test Claude Agent\n",
         "\n",
